--- a/app/src/main/res/layout/activity_app_bar.xml
+++ b/app/src/main/res/layout/activity_app_bar.xml
@@ -29,7 +29,7 @@
 			app:contentScrim="?attr/colorPrimary"
 			app:expandedTitleMarginEnd="64dp"
 			app:expandedTitleMarginStart="48dp"
-			app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+			app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
 			<ImageView
 				android:id="@+id/backgroundImageView"
